tests/parser/valid/expressions/logical.src
fn test() {
    bool a = true && false;
    bool b = true || false;
    bool c = !true;
    bool d = (5 > 3) && (10 < 20) || !false;
}
