tests/parser/invalid/syntax_errors/unexpected_token.src
fn test() {
    int x = 5;
    x = x @ 3;  // Unexpected '@'
    return x;
}